8314225: SIGSEGV in JavaThread::is_lock_owned